// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getFocus() should return correct css for opts: %s 1`] = `
{
  "&:focus": {
    "&:not(:focus-visible)": {
      "outlineColor": "transparent",
    },
    "outline": "#0A0AFF solid 2px",
    "outlineOffset": "2px",
  },
}
`;

exports[`getFocus() should return correct css for opts: { offset: '5rem' } 1`] = `
{
  "&:focus": {
    "&:not(:focus-visible)": {
      "outlineColor": "transparent",
    },
    "outline": "#0A0AFF solid 2px",
    "outlineOffset": "5rem",
  },
}
`;
